log
Thu 21 Mar 2024 08:45:00 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
9261c62
Thu 21 Mar 2024 08:45:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
93198c3
Thu 21 Mar 2024 08:50:13 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:20: error: implicit declaration of function ‘firts’; did you mean ‘first’? [-Werror=implicit-function-declaration]
   63 |   void *elemento = firts(L);
      |                    ^~~~~
      |                    first
exercises.c:63:20: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c:64:7: error: variable ‘suma’ set but not used [-Werror=unused-but-set-variable]
   64 |   int suma = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
2b8e691
Thu 21 Mar 2024 08:50:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:7: error: variable ‘suma’ set but not used [-Werror=unused-but-set-variable]
   64 |   int suma = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
3ffbb25
Thu 21 Mar 2024 08:50:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1bd5f52
Thu 21 Mar 2024 08:50:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
47a4484
Thu 21 Mar 2024 08:59:20 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
60c40fb
Thu 21 Mar 2024 09:00:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
0cc20e4
Thu 21 Mar 2024 09:00:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
d3a749a
Thu 21 Mar 2024 09:01:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
b7e8bad
